test/errors/resolution/tupleDecls.chpl
var (x,y) = notKnown;
var z = 1;
var (u,v) = z;
var (a,b,c) = (1,2);
