test/errors/resolution/tupleDecls.1.good
tupleDecls.chpl:1: error: 'notKnown' cannot be found
tupleDecls.chpl:3: error: value of non-tuple type 'int(64)' cannot be split using a tuple declaration
tupleDecls.chpl:4: error: tuple size mismatch in split tuple declaration
